tests/ui/consts/value-suggestion-ice-123906.stderr
error[E0308]: mismatched types
  --> $DIR/value-suggestion-ice-123906.rs:3:9
   |
LL | fn as_chunks<const N: usize>() -> [u8; N] {
   |                                   ------- expected `[u8; N]` because of this return type
LL |     loop {
   |     ---- this loop is expected to be of type `[u8; N]`
LL |         break;
   |         ^^^^^ expected `[u8; N]`, found `()`
   |
help: give the `break` a value of the expected type
   |
LL |         break /* value */;
   |               +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
