tests/ui/consts/value-suggestion-ice-123906.rs
fn as_chunks<const N: usize>() -> [u8; N] {
    loop {
        break;
        //~^ ERROR mismatched types
    }
}

fn main() {}
